fix(stubs): fixing broken styles on 404

--- a/src/stubs/stubs.scss
+++ b/src/stubs/stubs.scss
@@ -1,6 +1,7 @@
 @import '../variables';
 
-.stub-page {
+.stub-page,
+.error-page {
   font-family: 'Open Sans', sans-serif;
   padding: 4rem 1rem;
   text-align: center;
@@ -87,7 +88,7 @@
   a:visited {
     text-decoration: underline;
   }
-  
+
   .highlight {
     font-size: 1.2rem;
     margin: 0 30%;
